# claude-voice

./: ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  ROADMAP2.md  pyproject.toml
.claude-plugin/: plugin.json
agents/: narrator.md
commands/: voice.md
design/: ARCHITECTURE.md  README.md  ROADMAP.md  daemon-topology.md  interaction-map.md  state-machine.md  volume-pipeline.md
hooks/: voice_event.py
lib/: __init__.py  agents.py  ambient.py  audio.py  constants.py  duplex.py  flags.py  logger.py  mic.py  presets.py  ptt.py  queue_client.py  router.py  state.py  stt.py  theme.py  tts.py  utils.py  volume.py  wake.py
notebooks/: poc_gradio.py  poc_jupyter.ipynb  poc_panel.py  poc_streamlit.py  voice_explorer.py  voice_explorer_marimo.py
plans/: phase-3.5-multi-agent-audio.md  phase-3.5-remaining-layers.md  phase-4-stt-conversation.md  task-103-daemon-lifecycle.md
scripts/: generate_agent_sounds.py  generate_sounds.py  install-voice-keybindings.sh  play_test.py  stt_daemon.py  tmux_focus_hook.sh  tts_daemon.py  tts_warmup.py  voice-volume.sh  voice_arbiter.py  voice_health.py  voice_queue.py
skills/voice/: SKILL.md
specs/: 01-plugin-scaffold.md  02-theme-engine.md  03-sound-synthesis.md  04-hook-architecture.md  05-audio-playback.md  06-tts-engine.md  07-stt-engine.md  08-identity-personality.md  09-gamification.md  10-rhythms-integration.md  11-asset-management.md  12-quality-testing.md  13-elevenlabs-deep.md  14-speech-to-reality.md  15-tmux-focus-gate.md  18-voice-queue-daemon.md
systemd/: voice-arbiter.service
tests/: test_voice.py
(+24 files in other folders)
